# tableai

./: .gitignore  README.md  alembic.ini  application_roots.yml  composeable.md  docker-compose.yml  logger.py  project_structure.md  pyproject.toml  settings.yml  tags.yml
.github/workflows/: git_tag.yaml
alembic/: env.py
alembic/versions/: 1b64f4c53c9d_make_each_inference_request_unique.py  503669bd6884_add_new_column_to_filenoderecord.py  b36f54ab3d32_fix_typo_in_classification_label.py
api/: constants.py  main.py
api/app/: config.py  main.py  models.py  requests.py  service.py
api/database/: run_queries.py
api/integrations/: dropbox.py
api/models/: requests.py  service.py  tasks.py
api/routes/inference/: vision.py
api/service/: dependencies.py  manager.py
api/tableai/: extract.py  frontend.py
api/tasks/: on_start.py  on_task_end.py  wrappers.py
backend/database/: sqllite_manager.py
backend/models/: backend.py
core/: config.py  constants.py  expectations.py  log.py  paths.py  serialize.py  sync.py  tableai.py
core/tableai/inference/: base.py
core/tableai/pdf/: __init__.py  coordinates.py  generic_assesors.py  generic_models.py  generic_params.py  generic_results.py  generic_tools.py  generic_types.py  models.py  pdf_model.py  pdf_page.py  query.py  query_engine.py  query_funcs.py  query_funcs_wrappers.py  tools.py  trace.py
core/tableai/pdf/flows/: base_flow.py  generic.py  generic_context.py  generic_dependencies.py  generic_flow.py  generic_params.py  generic_results.py  query_helper.py  reduce_pdf_noise.py  trace.py  trace_log.py  validations.py
core/tableai/pdf/flows/reduce_pdf_noise/: flow.py  result_model.py
core/tableai/readers/: files.py
core/tableai/system/: paths.py
data_loaders/: ingest_files.py
data_writers/: export.py
extract/: helpers.py  stages.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  api.ts  env.d.ts
frontend/src/components/: HomePage.tsx
frontend/src/components/auth/: AuthCard.tsx  UserDropdown.tsx
frontend/src/components/classify/: ClassifyPage.tsx
frontend/src/components/icons/: LocalIcon.tsx
frontend/src/components/integrations/: CloudIntegrationsPage.tsx  EnhancedHeaderControls.tsx  ForceSwitch.tsx  IntegrationsPage.tsx  ProcessButton.tsx  SyncButton.tsx  UnifiedFileViewer.tsx
frontend/src/components/layouts/: PageLayout.tsx
frontend/src/components/pdf/: PdfViewer.tsx
frontend/src/components/ui/: CustomTooltip.tsx
frontend/src/types/: user.ts
frontend/src/utils/: testUtils.ts
frontend/ui/: package-lock.json  package.json
frontend/ui/src/: App.js  index.js  theme.js
frontend/ui/src/components/: Layout.js
frontend/ui/src/components/api/: dropboxApi.js  pdfApi.js
frontend/ui/src/components/filters/: FilterControls.js
frontend/ui/src/components/integrations/: DropboxBreadcrumbs.js  DropboxCardListStyles.js  DropboxFileItem.js  DropboxFilterComponent.js  DropboxFolders.js  DropboxHeaderControls.js  ForceSwitch.js  ProcessButton.js  Stage0StatusIcon.js  SyncButton.js
frontend/ui/src/components/pdf/: BoundingBoxes.js  (+6 more)
frontend/ui/src/config/: menuConfig.js  sidebarStyles.js
frontend/ui/src/constants/: index.js
frontend/ui/src/context/: PdfDataContext.js
frontend/ui/src/hooks/: usePdfData.js
frontend/ui/src/pages/: ApiTestPage.js  ClassifyPage.js  DropboxPage.js  ExtractViewerPage.js  HomePage.js  PdfViewer.js  PdfViewerApp.js
frontend/ui/src/utils/: bytes.js  runTask.js  taskRunner.js
integrations/dropbox/: auth.py  files.py  sync.py
integrations/s3/: boto.py
llm/modules/: inference.py
llm/outputs/: pdf_schema.yml
pdf/: file.py  pdf.py
plugins/classifier/: Dockerfile.classifier.cpu
plugins/classifier/requirements/: classifier.cpu.requirements.txt
plugins/classifier/src/: main.py  pdf_cluster_dit.py
plugins/detectron/: Dockerfile.detectron.cpu  Dockerfile.detectron.gpu
plugins/detectron/app/: inference.py  main.py
plugins/yolo/: Dockerfile.yolo.cpu  Dockerfile.yolo.gpu  pyproject.toml
plugins/yolo/app/: inference.py  main.py
plugins/yolo/requirements/: yolo.cpu.requirements.txt
plugins/yolo/reuirements/: yolo.cpu.txt  yolo.gpu.requirements.txt
plugins/yolo/src/: inference.py  main.py
tableai/core/: paths.py  serialize.py  time.py  wraps.py
tableai/data_loaders/: files.py
tableai/expectations/: base.py
tableai/extract/: helpers.py  index_search.py  process.py  query_engine.py  stages.py  table_headers.py
tableai/inference/: pdf_vision.py  vision_call.py
tableai/inference/models/: expectations.py
tableai/inference/prompts/: table_structure.py
tableai/nodes/: file_node.py  pdf_node.py
tableai_backend/: pyproject.toml
tableai_backend/tableai_backend/: Dockerfile  __init__.py  entrypoint.sh
tableai_backend/tableai_backend/app/: __init__.py  admin.py  auth.py  database.py  main.py  models.py  plug.py  schemas.py
tableai_backend/tableai_backend/app/client/: classifier_client.py
tableai_backend/tableai_backend/app/core/: config.py
tableai_backend/tableai_backend/app/routers/: auth.py  classifier.py  integrations_dropbox.py  metadata.py  oauth_dropbox.py  sync_dropbox.py  users.py
tableai_backend/tableai_backend/app/services/: boto_s3.py  dropbox_s3_sync.py  oauth_simple.py  pdf_cluster.py  s3_utils.py  task_manager.py  token_crypto.py
tableai_plugins/: README.md  pyproject.toml
tableai_plugins/tableai_plugins/: __init__.py  _yolo.py  dit.py  loader.py  vision.py  yolo.py
tableai_slim/: pyproject.toml
tableai_slim/tableai/: __init__.py  _async_iter.py  _coordinates.py  _exceptions.py  _utils.py  exceptions.py  pdf.py
tests/: imports.py
tests/tableai/: pdf_document.py
tests/yolo/: test_yolo_inference.py
tools/tableai_tools/pdf/: models.py  query.py  query_engine.py  query_funcs.py
tools/tableai_tools/readers/: files.py
ui/pdf-viewer-app/: package-lock.json  package.json
ui/pdf-viewer-app/docs/: building.md
ui/pdf-viewer-app/src/: App.js  BoundingBoxes.js  DataTable.js  FilterControls.js  ToggleContext.js  pdfDataProcessor.js  stageConfig.js
(+54 files in other folders)
