[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "0.0.0"

[project]
name = "tableai"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "PDF Table extraction UV monorepo: core lib + backend + optional plugins (CPU/GPU)."
authors = [
        { name = "John Schlafly", email = "john@schlafdata.com" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

[project.urls]
Source = "https://github.com/jschlafdata/tableai"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" }, 
    { git = { commit = true, tags = true }},
    { file = "**/*.toml" }
]

[tool.hatch.metadata.hooks.uv-dynamic-versioning]
dependencies = [
  "tableai-slim[plugins]=={{ version }}"
]

[tool.uv.sources]
tableai = { workspace = true }
tableai-slim = { workspace = true }
tableai-plugins = { workspace = true }
tableai-backend = { workspace = true }

[tool.uv.workspace]
members = [
    "tableai_slim",
    "tableai_plugins",
    "tableai_backend"
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.5"
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
  "asyncio: mark test as asyncio-based",
  "slow: marks tests as slow",
]
filterwarnings = [
  "ignore: builtin type SwigPyObject.*:DeprecationWarning",
  "ignore: builtin type swigvarlink.*:DeprecationWarning",
]