[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "tableai-plugins"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "PDF Table extraction UV monorepo: core lib + backend + optional plugins (CPU/GPU)."
authors = [
        { name = "John Schlafly", email = "john@schlafdata.com" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

[project.urls]
Homepage = "https://github.com/jschlafdata/tableai/tree/main"
Source = "https://github.com/jschlafdata/tableai/tree/main"

[tool.hatch.metadata.hooks.uv-dynamic-versioning]
dependencies =   [
    "ultralytics @ git+https://github.com/THU-MIG/yolov10.git",
    "tableai-slim=={{ version }}",
    "huggingface-hub==0.34.4",
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" }, 
    { git = { commit = true, tags = true }},
    { file = "**/*.toml" }
]

[tool.hatch.build.targets.wheel]
packages = ["tableai_plugins"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
tableai-slim = { workspace = true }