[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "tableai-plugins"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "PDF Table extraction UV monorepo: core lib + backend + optional plugins (CPU/GPU)."
authors = [
        { name = "John Schlafly", email = "john@schlafdata.com" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

[project.urls]
Homepage = "https://github.com/jschlafdata/tableai"
Source = "https://github.com/jschlafdata/tableai"

[tool.hatch.metadata.hooks.uv-dynamic-versioning]
dependencies =   [
    "ultralytics @ git+https://github.com/THU-MIG/yolov10.git",
    "tableai-slim=={{ version }}",
    "tableai-backend=={{ version }}",
    "huggingface-hub==0.34.4",
    "opencv-python==4.9.0.80",
    "scipy==1.13.0",
    "hdbscan==0.8.40",
    "umap-learn==0.5.7",
    "tqdm==4.67.1",
    "matplotlib==3.10.0",
    "PyYAML==6.0.2",
    "timm==1.0.12",
    "transformers",
    "torch", 
    "torchvision"
]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" }, 
    { git = { commit = true, tags = true }},
    { file = "**/*.toml" }
]

[tool.hatch.build.targets.wheel]
packages = ["tableai_plugins"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
tableai-slim = { workspace = true }