[build-system]
requires = ["hatchling", "uv-dynamic-versioning>=0.7.0"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true

[project]
name = "tableai-slim"
dynamic = ["version", "dependencies", "optional-dependencies"]
description = "PDF Table extraction UV monorepo: core lib + backend + optional plugins (CPU/GPU)."
authors = [
        { name = "John Schlafly", email = "john@schlafdata.com" },
]
readme = "README.md"
requires-python = ">=3.11,<4.0"

[project.urls]
Homepage = "https://github.com/jschlafdata/tableai/tree/main"
Source = "https://github.com/jschlafdata/tableai/tree/main"

[tool.hatch.metadata.hooks.uv-dynamic-versioning]
dependencies=[
    "pandas==2.2.3",
    "numpy==2.2.4",
    "PyMuPDF==1.25.5",
    "json-repair==0.32.0",
    "pydantic==2.9.2",
    "pyyaml==6.0.1",
    "pytesseract==0.3.13",
    "ocrmypdf==16.10.1",
    "pdf2image==1.17.0",
    "Pillow>=10.0.0",
    "dateparser==1.2.1"
]

[tool.hatch.metadata.hooks.uv-dynamic-versioning.optional-dependencies]
plugins = ["tableai-plugins=={{ version }}"]

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" }, 
    { git = { commit = true, tags = true }},
    { file = "**/*.toml" }
]

[tool.hatch.build.targets.wheel]
packages = ["tableai"]

[tool.hatch.metadata]
allow-direct-references = true
